Closed
Bug 345620
Opened 17 years ago
Closed 17 years ago
"text-shadow: menutext;" causes "ASSERTION: Must be a color value"
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: dbaron)
References
Details
(Keywords: assertion, testcase, Whiteboard: [patch])
Attachments
(2 files)
91 bytes,
text/html
|
Details | |
1.52 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Must be a color value: 'unit == eCSSUnit_String || unit == eCSSUnit_Color', file /Users/admin/trunk/mozilla/layout/style/nsCSSParser.cpp, line 5943 This assertion (in CSSParserImpl::ParseTextShadow) was added in bug 308409.
Reporter | ||
Comment 1•17 years ago
|
||
Assignee | ||
Comment 2•17 years ago
|
||
So the problem here is simply that the assertion is buggy. This should work fine, even if bug 10713 lands as is, since the patch ot bug 10713 uses SetColor which handles system colors just fine.
Attachment #230521 -
Flags: superreview?(bzbarsky)
Attachment #230521 -
Flags: review?(bzbarsky)
Assignee | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [patch]
![]() |
||
Comment 3•17 years ago
|
||
Comment on attachment 230521 [details] [diff] [review] patch r+sr=bzbarsky
Attachment #230521 -
Flags: superreview?(bzbarsky)
Attachment #230521 -
Flags: superreview+
Attachment #230521 -
Flags: review?(bzbarsky)
Attachment #230521 -
Flags: review+
Assignee | ||
Comment 4•17 years ago
|
||
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Reporter | ||
Updated•16 years ago
|
Flags: in-testsuite-
Assignee | ||
Updated•16 years ago
|
Blocks: text-shadow
You need to log in
before you can comment on or make changes to this bug.
Description
•