Fix incorrectly-written assertion.  b=345620  r+sr=bzbarsky